--- a/public/styles.css
+++ b/public/styles.css
@@ -60,3 +60,58 @@ body{
 .pomodoro__restart{
     font-size:30px;
 }
+.settings-button{
+    cursor:pointer;
+    border:0px;
+}
+
+.settings{
+    width:100%;
+    height:100vh;
+    position:absolute;
+    left:-100%;
+    top:10vh;
+    z-index: 10;
+    background-color:#2D033B;
+}
+
+.settings-active{
+    transition-duration: 0.5s;
+    left:0%;
+}
+
+.settings-desactive{
+    transition-duration: 0.5s;
+    left:-100%;
+}
+
+.settings__label{
+    width:40%;
+}
+
+.settings__label{
+    font-weight: 900;
+}
+
+.settings__input{
+    background-color: transparent;
+    color:#FFFFFF;
+    width:22%;
+    padding:1px;
+    font-weight:900;
+    border: 2px solid #FFFFFF;
+    border-radius: 5px;
+}
+
+.settings__input[type="time"]::-webkit-calendar-picker-indicator{
+    filter: invert(100%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
+}
+
+.settings__input:active,
+.settings__input::selection,
+.settings__input:focus{
+    background-color:transparent;
+    color:#FFFFFF;
+    border-color: #FFFFFF;
+    border-radius: 5px;
+}
