--- a/public/styles.css
+++ b/public/styles.css
@@ -115,3 +115,9 @@ body{
     border-color: #FFFFFF;
     border-radius: 5px;
 }
+
+.pomodoro__mode,
+.pomodoro__cycle-count{
+    font-size:20px;
+    font-weight: 900;
+}
