--- a/public/styles.css
+++ b/public/styles.css
@@ -14,6 +14,7 @@ body{
     font-size:20px;
     padding:6px 12px 6px 12px;
     line-height: 19px;
+    font-weight:900;
 }
 
 .custom-nav-link{
@@ -22,6 +23,8 @@ body{
     border-radius: 15px;
     line-height: 15px;
     margin-left: 15px;
+    font-weight:900;
+    font-size:15px;
 }
 
 .custom-navbar-brand:hover,
@@ -59,6 +62,7 @@ body{
 .pomodoro__control,
 .pomodoro__restart{
     font-size:30px;
+    cursor:pointer;
 }
 .settings-button{
     cursor:pointer;
@@ -70,7 +74,7 @@ body{
     height:100vh;
     position:absolute;
     left:-100%;
-    top:10vh;
+    top:5vh;
     z-index: 10;
     background-color:#2D033B;
 }
@@ -119,5 +123,39 @@ body{
 .pomodoro__mode,
 .pomodoro__cycle-count{
     font-size:20px;
-    font-weight: 900;
+    font-weight: bolder;
+}
+
+@media (min-width: 768px) {
+    .pomodoro__mode,
+    .pomodoro__cycle-count{
+        font-size:40px;
+    }
+
+    .pomodoro__count{
+        font-size:48px;
+    }
+
+    .pomodoro__control,
+    .pomodoro__restart{
+        font-size:50px;
+    }
+
+    .settings{
+        width: 365px;
+        border-right: 2px solid #FFFFFF;
+        border-top: 2px solid #FFFFFF;
+        padding: 10px;
+        border-top-right-radius: 15px;
+    }
+
+
+
+    .custom-navbar-brand{
+        font-size:32px;
+        padding:9px 15px 9px 15px;
+
+    }
+
+
 }
