--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,41 @@ body{
     font-family:sans-serif;
     background-color:#2D033B;
 }
+.custom-form__container{
+    background: #810CA8;
+    border-radius: 10px;
+}
+
+.custom-form__label
+
+{
+    font-size:13px;
+    font-weight:800;
+}
+
+.custom-form-input
+
+{
+    background: #F5F5F5;
+    border-radius:10px;
+}
+
+.login__ingresar-btn{
+    border-radius:10px;
+    background-color:#5D3891;
+    color:#FFFFFF;
+    font-weight:800;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.login__ingresar-btn:hover{
+    color:#FFFFFF;
+}
+
+
 
 .custom-navbar{
     background-color:#2D033B;
