--- a/public/styles.css
+++ b/public/styles.css
@@ -2,13 +2,20 @@ body{
     font-family:sans-serif;
     background-color:#2D033B;
 }
+
+.app{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height:100vh;
+}
+
 .custom-form__container{
     background: #810CA8;
     border-radius: 10px;
 }
 
 .custom-form__label
-
 {
     font-size:13px;
     font-weight:800;
@@ -160,6 +167,24 @@ body{
     font-size:20px;
     font-weight: bolder;
 }
+
+.bottom{
+    background-color:#810CA8;
+    color: #FFFFFF;
+    font-size:20px;
+}
+.bottom p{
+    margin:0;
+}
+
+.bottom a{
+    background-color:#2D033B;
+    color: #FFFFFF;
+    text-decoration-line: none;
+    padding:1px 5px 1px 5px;
+    border-radius:10px;
+}
+
 
 @media (min-width: 768px) {
     .pomodoro__mode,
