--- a/public/styles.css
+++ b/public/styles.css
@@ -58,7 +58,7 @@ body{
     line-height: 19px;
     font-weight:900;
 }
-
+.custom-dropdown-menu,
 .custom-nav-link{
     color:#FFFFFF;
     background-color:#810CA8;
@@ -69,15 +69,22 @@ body{
     font-size:15px;
 }
 
+.custom-dropdown-item{
+    color:#FFFFFF;
+    background-color:#810CA8;
+    border-radius: 15px;
+    line-height: 15px;
+    font-weight:900;
+    font-size:15px;
+}
+
 .custom-navbar-brand:hover,
 .custom-nav-link:hover{
     color:#FFFFFF;
 }
 
 
-.pomodoro{
-    margin-top: 53px;
-}
+
 .pomodoro__bar{
     width:150px;
     height:150px;
