--- a/public/styles.css
+++ b/public/styles.css
@@ -146,6 +146,10 @@ body{
     left:-100%;
 }
 
+.settings__close-button{
+    font-size:30px;
+}
+
 .settings__label{
     width:40%;
 }
@@ -200,7 +204,45 @@ body{
     border-radius:10px;
 }
 
+.statistics{
+    position:absolute;
+    display:none;
+    z-index:10;
+    left:0;
+    top:0;
+    bottom:0;
+    right:0;
+    background-color:#2D033B;
+    width: 320px;
+    height:500px;
+    border:#FFFFFF 1px solid;
+    border-radius:10px;
 
+}
+.statistics__login-reminder{
+    color:#FFFFFF;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: center;
+    height:100%;
+    font-size: 20px;
+}
+.statistics__title{
+    font-size:16px;
+    font-weight: bold;
+}
+
+.statistics__button{
+    width:fit-content;
+    background-color:#810CA8;
+    padding:5px 10px;
+}
+
+.statistics-active{
+    display: block;
+}
 @media (min-width: 768px) {
     .pomodoro__mode,
     .pomodoro__cycle-count{
